changed input type from text to email

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="contact">
                 <h4>Join our mailing list. You will be kept up-to-date with all of the development madness, and of course, be notified when the impending apocalypse (release date) is nigh.</h4>
                 <form>
-                  Enter Email: <input type="text" placeholder="johndoe@gmail.com">
+                  Enter Email: <input type="email" placeholder="johndoe@gmail.com">
                   <input type="submit">
                 </form>
             </div>
