--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Flappy Bird Clone Landing Page</title>
-  <meta name="description" content="A brief description of your site">
+  <meta name="description" content="The Flappy Bird 2.0 app.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="shortcut icon" href="/favicon.ico">
