Reformatted scss folder, added layout partial, changed margins, some fonts

--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" />
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -33,15 +33,15 @@
   <section class="features">
     <ul>
       <li>
-        <img src="http://storage.torontosun.com/v1/dynamic_resize/sws_path/suns-prod-images/1297522163256_ORIGINAL.jpg?quality=80&size=420x">
+        <img src="img/flappy1.jpg">
         <h2>Keep your lovably sacrilegious mutation from being ravaged by deadly pipes.</h2>
       </li>
       <li>
-        <img src="http://a3.mzstatic.com/us/r30/Purple/v4/d7/29/42/d7294232-f925-3972-587e-1dc1e5f32b1d/screen1136x1136.jpeg">
+        <img src="img/flappy2.jpeg">
         <h2>Receive a complimentary index finger workout. No Wiimote required for this sweat!!</h2>
       </li>
       <li>
-        <img src="http://i1-news.softpedia-static.com/images/news2/Flappy-Bird-Is-Making-a-Comeback-433290-2.jpg">
+        <img src="img/flappy3.jpg">
         <h2>Delightfully nostalgic "retro" 2D graphics. No, it's not a ripoff. It's vintage!</h2>
       </li>
     </ul>
