--- a/site/index.html
+++ b/site/index.html
@@ -10,62 +10,73 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" />
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" /> -->
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-
-  <header>
-    <h1>The Return Of The Flappy Bird</h1>
-  </header>
-  <section class="intro">
-    <p>The world thought it was safe when "it" was removed from the app stores.</p>
-    <p>Little did they know...</p>
-  </section>
-  <section class="features">
-    <ul>
-      <li>
-        <img src="img/flappy1.jpg">
-        <h2>Keep your lovably sacrilegious mutation from being ravaged by deadly pipes.</h2>
-      </li>
-      <li>
-        <img src="img/flappy2.jpeg">
-        <h2>Receive a complimentary index finger workout. No Wiimote required for this sweat!!</h2>
-      </li>
-      <li>
-        <img src="img/flappy3.jpg">
-        <h2>Delightfully nostalgic "retro" 2D graphics. No, it's not a ripoff. It's vintage!</h2>
-      </li>
-    </ul>
-  </section>
-  <section class="action">
-    <a href="#">Begin!</a>
-  </section>
-  <footer>
-    <div class="social">
-      <h3>Follow us</h3>
+  <!-- <link rel="stylesheet" href="css/styles.css"> -->
+  <style>html {box-sizing: border-box; } *, *::after, *::before {box-sizing: inherit; } body {margin: 1em; text-align: center; background-color: #bdc3c7; } body nav, body section {margin: 3em auto; } body .features li {margin-bottom: 1em; } body .features li img {width: 12em; margin-bottom: 1em; } @media screen and (min-width: 768px) {body .features {max-width: 100%; margin-left: auto; margin-right: auto; } body .features::after {clear: both; content: ""; display: table; } body .features li {float: left; display: block; margin-right: 2.35765%; width: 31.76157%; } body .features li:last-child {margin-right: 0; } } @media screen and (min-width: 1024px) {body img {width: 17em; } } ul {padding: 0; } ul li {display: inline-block; } ul li a {padding: 0.5em 0.5em; border-radius: 0.3em; background-color: #1abc9c; } nav {margin: 0 2em; text-align: right; } header h1 {font-size: 2em; font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif; } h2 {font-size: 1em; } a {text-decoration: none; color: #ecf0f1; } .intro p {font-style: italic; } p {font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 0.8em; } .action a {font-size: 1.5em; padding: 0.5em 0.5em; border-radius: 0.3em; background-color: #1abc9c; } @media screen and (min-width: 768px) {header h1 {font-size: 3em; } h2 {font-size: 1.2em; } p {font-size: 1.2em; } .action a {font-size: 2em; } }</style> </head>
+  <body>
+    <nav>
       <ul>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
-    </div>
-    <div class="contact">
-      <h4>Join our mailing list. You will be kept up-to-date with all of the development madness, and of course, be notified when the impending apocalypse (release date) is nigh.</h4>
-      <form>
-      Enter Email: <input type="email" autocomplete="on" placeholder="johndoe@gmail.com">
-        <input type="submit">
-      </form>
-    </div>
-    <p>By Gregory Federico. Courtesy of Dong Nguyen, original mastermind behind Flappy Bird.</p>
-      </footer>
-    </body>
-    </html>
+    </nav>
+
+    <header>
+      <h1>The Return Of The Flappy Bird</h1>
+    </header>
+    <section class="intro">
+      <p>The world thought it was safe when "it" was removed from the app stores.</p>
+      <p>Little did they know...</p>
+    </section>
+    <section class="features">
+      <ul>
+        <li>
+          <img src="img/flappy1.jpg">
+          <h2>Keep your lovably sacrilegious mutation from being ravaged by deadly pipes.</h2>
+        </li>
+        <li>
+          <img src="img/flappy2.jpeg">
+          <h2>Receive a complimentary index finger workout. No Wiimote required for this sweat!!</h2>
+        </li>
+        <li>
+          <img src="img/flappy3.jpg">
+          <h2>Delightfully nostalgic "retro" 2D graphics. No, it's not a ripoff. It's vintage!</h2>
+        </li>
+      </ul>
+    </section>
+    <section class="action">
+      <a href="#">Begin!</a>
+    </section>
+    <footer>
+      <div class="social">
+        <h3>Follow us</h3>
+        <ul>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Instagram</a></li>
+        </ul>
+      </div>
+      <div class="contact">
+        <h4>Join our mailing list. You will be kept up-to-date with all of the development madness, and of course, be notified when the impending apocalypse (release date) is nigh.</h4>
+        <form>
+          Enter Email: <input type="email" autocomplete="on" placeholder="johndoe@gmail.com">
+          <input type="submit">
+        </form>
+      </div>
+      <p>By Gregory Federico. Courtesy of Dong Nguyen, original mastermind behind Flappy Bird.</p>
+    </footer>
+    <script>
+      var cb = function() {
+        var l = document.createElement('link'); l.rel = 'stylesheet';
+        l.href = 'css/styles.css';
+        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+      };
+      var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+      webkitRequestAnimationFrame || msRequestAnimationFrame;
+      if (raf) raf(cb);
+      else window.addEventListener('load', cb);
+    </script>
+  </body>
+  </html>
