--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@
   <body>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li class="lnk-home"><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -43,7 +43,7 @@
       </ul>
     </section>
     <section class="action">
-      <a href="#">Begin!</a>
+      <div><a href="">Begin!</a></div>
     </section>
     <footer>
       <div class="social">
@@ -63,5 +63,9 @@
       </div>
       <p>By Gregory Federico. Courtesy of Dong Nguyen, original mastermind behind Flappy Bird.</p>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.min.js"></script>
+    <script src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.ui.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
