Added defer properites to scripts, added 'experimental' action button for testing

--- a/site/index.html
+++ b/site/index.html
@@ -43,7 +43,8 @@
       </ul>
     </section>
     <section class="action">
-      <div><a href="">Begin!</a></div>
+      <a href="">Begin!</a>
+      <input type="button" value="Begin!">
     </section>
     <footer>
       <div class="social">
@@ -63,9 +64,9 @@
       </div>
       <p>By Gregory Federico. Courtesy of Dong Nguyen, original mastermind behind Flappy Bird.</p>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.min.js"></script>
-    <script src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.ui.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script defer src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.min.js"></script>
+    <script defer src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.ui.min.js"></script>
+    <script defer type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
