Removed old action button, changed animation

--- a/site/index.html
+++ b/site/index.html
@@ -43,7 +43,7 @@
       </ul>
     </section>
     <section class="action">
-      <a href="">Begin!</a>
+      <!-- <a href="">Begin!</a> -->
       <input type="button" value="Begin!">
     </section>
     <footer>
