--- a/site/index.html
+++ b/site/index.html
@@ -43,8 +43,8 @@
       </ul>
     </section>
     <section class="action">
-      <!-- <a href="">Begin!</a> -->
-      <input type="button" value="Begin!">
+      <div class="btn-action"><a href="">Begin!</a></div>
+      <!-- <input type="button" value="Begin!"> -->
     </section>
     <footer>
       <div class="social">
