--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 </head>
 <body>
+	<canvas id="main-canvas"></canvas>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
