Working <picture> element, adjusts to viewport width

--- a/site/index.html
+++ b/site/index.html
@@ -14,6 +14,7 @@
     // Picture element HTML5 shiv
     document.createElement( "picture" );
     </script>
+    <script src="js/picturefill.min.js" async></script>
   </head>
   <body>
     <nav>
@@ -78,7 +79,7 @@
       <p>By Gregory Federico. Courtesy of Dong Nguyen, original mastermind behind Flappy Bird.</p>
     </footer>
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script async type = "text/javascript" src="js/picturefill.min.js"></script>
+    <!-- <script async type = "text/javascript" src="js/picturefill.min.js"></script> -->
     <script defer src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.min.js"></script>
     <script defer src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.ui.min.js"></script>
     <script defer type="text/javascript" src="js/app.js"></script>
