Adjusted margins in footer of landing-page, font-size, added link to livePerf for performance indicators. Bugs: 501 error for livePerf

--- a/site/index.html
+++ b/site/index.html
@@ -15,6 +15,7 @@
     document.createElement( "picture" );
     </script>
     <script src="js/picturefill.min.js" async></script>
+    <!-- // <script src="js/livePerf.js"></script> -->
   </head>
   <body>
     <nav>
