Added inline images for all sections

--- a/site/index.html
+++ b/site/index.html
@@ -48,11 +48,22 @@
           <h2>Keep your lovably sacrilegious mutation from being ravaged by deadly pipes.</h2>
         </li>
         <li>
-          <img src="img/flappy2.jpeg">
+          <!-- <img src="img/flappy2.jpeg"> -->
+          <picture>
+            <source srcset="img/flappy-med2.jpg" media="(min-width: 64em)" alt="...">
+            <source srcset="img/flappy2.jpeg" media="(min-width: 37.5em)" alt="...">
+             <!-- <source src="img/flappy3.jpg"> -->
+            <img src="img/flappy2.jpeg">
+          </picture>
           <h2>Receive a complimentary index finger workout. No Wiimote required for this sweat!!</h2>
         </li>
         <li>
-          <img src="img/flappy3.jpg">
+        <picture>
+            <source srcset="img/flappy-med3.jpg" media="(min-width: 64em)" alt="...">
+            <source srcset="img/flappy3.jpg" media="(min-width: 37.5em)" alt="...">
+             <!-- <source src="img/flappy3.jpg"> -->
+            <img src="img/flappy3.jpg">
+          </picture>
           <h2>Delightfully nostalgic "retro" 2D graphics. No, it's not a ripoff. It's vintage!</h2>
         </li>
       </ul>
