--- a/site/index.html
+++ b/site/index.html
@@ -9,6 +9,7 @@
 
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css">
     <script>
     // Picture element HTML5 shiv
