--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter|Righteous|Sigmar+One|Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css">
     <script>
     // Picture element HTML5 shiv
@@ -27,7 +27,7 @@
       </ul>
     </nav>
     <header>
-      <h1>The Return Of The Flappy Bird</h1>
+      <h1>The Return of the Flappy Bird</h1>
     </header>
     <section class="intro">
       <p>The world thought it was safe when "it" was removed from the app stores.</p>
@@ -83,7 +83,7 @@
         </ul>
       </div>
       <div class="contact">
-        <h4>Join our mailing list. You will be kept up-to-date with all of the development madness, and of course, be notified when the impending apocalypse (release date) is nigh.</h4>
+        <p>Join our mailing list. You will be kept up-to-date with all of the development madness, and of course, be notified when the impending apocalypse (release date) is nigh.</p>
         <form>
           Enter Email: <input type="email" autocomplete="on" placeholder="johndoe@gmail.com">
           <input type="submit">
