--- a/site/index.html
+++ b/site/index.html
@@ -89,7 +89,7 @@
           <input type="submit">
         </form>
       </div>
-      <p>By Gregory Federico. Courtesy of Dong Nguyen, original mastermind behind Flappy Bird.</p>
+      <p id="copyw">By Gregory Federico. Courtesy of Dong Nguyen, original mastermind behind Flappy Bird. Backgrounds courtesy of <a href="http://www.freebiesgallery.com">freebiesgallery.com</a>, <a href="http://pixsearching.com">pixsearching.com</a></p>
     </footer>
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- <script async type = "text/javascript" src="js/picturefill.min.js"></script> -->
