--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 	<canvas id="main-canvas"></canvas>
+	<div id="overlay">
+		<h4>Score: <span id="pipes-flown-through">0</span></h4>
+	</div>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
