--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -10,6 +10,7 @@
 	<div id="overlay">
 		<h4>Score: <span id="pipes-flown-through">0</span></h4>
 	</div>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
