High Score added in overlay. For future local storage implementation

--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -8,7 +8,8 @@
 <body>
 	<canvas id="main-canvas"></canvas>
 	<div id="overlay">
-		<h4>Score: <span id="pipes-flown-through">0</span></h4>
+		<h4>Current Score: <span id="pipes-flown-through">0</span></h4>
+		<h4>High Score: <span id="high-score">0</span></h4>
 	</div>
 	<div id="images">
 		<img id="hado" src="images/hadouken.gif" width="2em" height="2em">
