Landing Page, begin button connects to flappy bird game

--- a/site/index.html
+++ b/site/index.html
@@ -70,7 +70,7 @@
       </ul>
     </section>
     <section class="action">
-      <div class="btn-action"><a href="">Begin!</a></div>
+      <div class="btn-action"><a href="http://gfed53.github.io/flappy-bird/flappy-bird/index.html">Begin!</a></div>
       <!-- <input type="button" value="Begin!"> -->
     </section>
     <footer>
