Pipes are now wooden planks

--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -13,6 +13,7 @@
 	</div>
 	<div id="images">
 		<img id="hado" src="images/hadouken.gif" width="2em" height="2em">
+		<img id="wood" src="images/wood.png">
 		<img id="ryu-stage" src="images/ryu-stage.jpg">
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
