Landing Page: Updated to reflect Street Fighter theme. Flappy Bird: Tweaked UI height/width

--- a/site/index.html
+++ b/site/index.html
@@ -30,8 +30,8 @@
       <h1>The Return of the Flappy Bird</h1>
     </header>
     <section class="intro">
-      <p>The world thought it was safe when "it" was removed from the app stores.</p>
-      <p>Little did they know...</p>
+      <p>Thought Flappy Bird was gone when it was removed from stores?</p>
+      <p>Fear not, for it has been resurrected. But...in what form?</p>
     </section>
     <section class="features">
       <ul>
@@ -39,33 +39,33 @@
           <!-- <img src="img/flappy1.jpg" srcset="img/flappy1.jpg 640w, img/flappy-med1.jpg 1024w"> -->
           <!-- portrait-cropped-sm.jpg 640w, portrait-cropped-lg.jpg 640w 2x -->
           <picture>
-            <source srcset="img/flappy-med1.jpg" media="(min-width: 64em)" alt="...">
-            <source srcset="img/flappy1.jpg" media="(min-width: 37.5em)" alt="...">
+            <source srcset="img/flyinghado3.png" media="(min-width: 64em)" alt="...">
+            <source srcset="img/flyinghado3.png" media="(min-width: 37.5em)" alt="...">
              <!-- <source src="img/flappy3.jpg"> -->
-            <img src="img/flappy1.jpg">
+            <img src="img/flyinghado3.png">
           </picture>
           <!-- <source srcset="large.jpg" media="(min-width: 800px)"> -->
   <!-- <img src="small.jpg" alt="…"> -->
-          <h2>Keep your lovably sacrilegious mutation from being ravaged by deadly pipes.</h2>
+          <h2>It's a...bird, it's....not a bird!</h2>
         </li>
         <li>
           <!-- <img src="img/flappy2.jpeg"> -->
           <picture>
-            <source srcset="img/flappy-med2.jpg" media="(min-width: 64em)" alt="...">
-            <source srcset="img/flappy2.jpeg" media="(min-width: 37.5em)" alt="...">
+            <source srcset="img/flyinghado1_lg.png" media="(min-width: 64em)" alt="...">
+            <source srcset="img/flyinghado2.png" media="(min-width: 37.5em)" alt="...">
              <!-- <source src="img/flappy3.jpg"> -->
-            <img src="img/flappy2.jpeg">
+            <img src="img/flyinghado2.png">
           </picture>
-          <h2>Receive a complimentary index finger workout. No Wiimote required for this sweat!!</h2>
+          <h2>The same great gameplay of the original, but with a new twist!!</h2>
         </li>
         <li>
         <picture>
-            <source srcset="img/flappy-med3.jpg" media="(min-width: 64em)" alt="...">
-            <source srcset="img/flappy3.jpg" media="(min-width: 37.5em)" alt="...">
+            <source srcset="img/ryu.jpg" media="(min-width: 64em)" alt="...">
+            <source srcset="img/akuma.jpg" media="(min-width: 37.5em)" alt="...">
              <!-- <source src="img/flappy3.jpg"> -->
-            <img src="img/flappy3.jpg">
+            <img src="img/ryu.jpg">
           </picture>
-          <h2>Delightfully nostalgic "retro" 2D graphics. No, it's not a ripoff. It's vintage!</h2>
+          <h2>..But what kind of a twist is this? (If the original Flappy Bird avoided a copyright-related lawsuit, this one definitely will not!)</h2>
         </li>
       </ul>
     </section>
@@ -89,7 +89,7 @@
           <input type="submit">
         </form>
       </div>
-      <p id="copyw">By Gregory Federico. Courtesy of Dong Nguyen, original mastermind behind Flappy Bird. Backgrounds courtesy of <a href="http://www.freebiesgallery.com">freebiesgallery.com</a>, <a href="http://pixsearching.com">pixsearching.com</a></p>
+      <p id="copyw">By Gregory Federico. Courtesy of Dong Nguyen, original mastermind behind Flappy Bird. Backgrounds courtesy of <a href="http://www.freebiesgallery.com">freebiesgallery.com</a>, <a href="http://pixsearching.com">pixsearching.com</a>. Theme courtesy (you guessed it) of Capcom's <a href="http://streetfighter.com/">Street Fighter</a> series.</p>
     </footer>
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- <script async type = "text/javascript" src="js/picturefill.min.js"></script> -->
