--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -12,6 +12,7 @@
 		<h3>Current Score: <span id="pipes-flown-through">0</span></h3>
 		<h3>High Score: <span id="high-score">0</span></h3>
 		<h3><span id="ready"></span></h3>
+		<input type="button" id="btn-pause" value="Pause">
 	</div>
 	<div id="images">
 		<img id="hado" src="images/hadouken.gif" width="2em" height="2em">
