Added about page, updated gulpfile.js, bookmark for contact

--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Flappy Bird Clone Landing Page</title>
+    <title>Flying Hadouken</title>
     <meta name="description" content="The Flappy Bird 2.0 app.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,8 +22,8 @@
     <nav>
       <ul>
         <li class="lnk-home"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="#social">Contact</a></li>
       </ul>
     </nav>
     <header>
@@ -36,24 +36,17 @@
     <section class="features">
       <ul>
         <li>
-          <!-- <img src="img/flappy1.jpg" srcset="img/flappy1.jpg 640w, img/flappy-med1.jpg 1024w"> -->
-          <!-- portrait-cropped-sm.jpg 640w, portrait-cropped-lg.jpg 640w 2x -->
           <picture>
             <source srcset="img/flyinghado3.png" media="(min-width: 64em)" alt="...">
             <source srcset="img/flyinghado3.png" media="(min-width: 37.5em)" alt="...">
-             <!-- <source src="img/flappy3.jpg"> -->
             <img src="img/flyinghado3.png">
           </picture>
-          <!-- <source srcset="large.jpg" media="(min-width: 800px)"> -->
-  <!-- <img src="small.jpg" alt="…"> -->
           <h2>It's a...bird, it's....not a bird!</h2>
         </li>
         <li>
-          <!-- <img src="img/flappy2.jpeg"> -->
           <picture>
             <source srcset="img/flyinghado1_lg.png" media="(min-width: 64em)" alt="...">
             <source srcset="img/flyinghado2.png" media="(min-width: 37.5em)" alt="...">
-             <!-- <source src="img/flappy3.jpg"> -->
             <img src="img/flyinghado2.png">
           </picture>
           <h2>The same great gameplay of the original, but with a new twist!!</h2>
@@ -62,7 +55,6 @@
         <picture>
             <source srcset="img/ryu.jpg" media="(min-width: 64em)" alt="...">
             <source srcset="img/akuma.jpg" media="(min-width: 37.5em)" alt="...">
-             <!-- <source src="img/flappy3.jpg"> -->
             <img src="img/ryu.jpg">
           </picture>
           <h2>..But what kind of a twist is this? (If the original Flappy Bird avoided a copyright-related lawsuit, this one definitely will not!)</h2>
@@ -71,10 +63,12 @@
     </section>
     <section class="action">
       <div class="btn-action"><a href="http://gfed53.github.io/flappy-bird/flappy-bird/index.html">Begin!</a></div>
-      <!-- <input type="button" value="Begin!"> -->
     </section>
+  <!--   <section class="about">
+      
+    </section> -->
     <footer>
-      <div class="social">
+      <div id="social" class="social">
         <h2>Follow us</h2>
         <ul>
           <li><a href="#">Facebook</a></li>
@@ -92,7 +86,6 @@
       <p id="copyw">By Gregory Federico. Courtesy of Dong Nguyen, original mastermind behind Flappy Bird. Backgrounds courtesy of <a href="http://www.freebiesgallery.com">freebiesgallery.com</a>, <a href="http://pixsearching.com">pixsearching.com</a>. Theme courtesy (you guessed it) of Capcom's <a href="http://streetfighter.com/">Street Fighter</a> series.</p>
     </footer>
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- <script async type = "text/javascript" src="js/picturefill.min.js"></script> -->
     <script defer src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.min.js"></script>
     <script defer src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.ui.min.js"></script>
     <script defer type="text/javascript" src="js/app.js"></script>
