Cleaned up comments/console logs, hover states non-existent in tablet view or smaller, other minor tweaks

--- a/site/index.html
+++ b/site/index.html
@@ -16,7 +16,6 @@
     document.createElement( "picture" );
     </script>
     <script src="js/picturefill.min.js" async></script>
-    <!-- // <script src="js/livePerf.js"></script> -->
   </head>
   <body>
     <nav>
@@ -64,9 +63,6 @@
     <section class="action">
       <div class="btn-action"><a href="http://gfed53.github.io/flappy-bird/flappy-bird/index.html">Begin!</a></div>
     </section>
-  <!--   <section class="about">
-      
-    </section> -->
     <footer>
       <div id="social" class="social">
         <h2>Follow us</h2>
@@ -78,6 +74,7 @@
       </div>
       <div class="contact">
         <p>Join our mailing list. You will be kept up-to-date with all of the development madness, and of course, be notified when the impending apocalypse (release date) is nigh.</p>
+        <p>Note: Not an actual mailing list.</p>
         <form>
           Enter Email: <input type="email" autocomplete="on" placeholder="johndoe@gmail.com">
           <input type="submit">
