--- a/site/index.html
+++ b/site/index.html
@@ -40,6 +40,11 @@
       z-index: 900;
     }
   </style>
+  <script>
+    // Picture element HTML5 shiv
+    document.createElement( "picture" );
+  </script>
+  <script src="js/picturefill.min.js" async></script>
 </head>
 <body>
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -126,11 +131,43 @@
         <div class="android-screen-section mdl-typography--text-center">
           <!-- <a name="screens"></a> -->
           <div class="mdl-typography--display-1-color-contrast my-sub-header">It's a...bird, it's....not a bird!</div>
-          <picture>
+          <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden; visibility: hidden;">
+            <!-- Loading Screen -->
+            <div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
+              <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>
+              <div style="position:absolute;display:block;background:url('loading.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
+            </div>
+            <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden;">
+              <div data-p="112.50" style="display: none;">
+                <img data-u="image" src="img/flyinghado3.png" />
+              </div>
+              <div data-p="112.50" style="display: none;">
+                <img data-u="image" src="img/flappy-med1.jpg" />
+              </div>
+              <div data-p="112.50" style="display: none;">
+                <img data-u="image" src="img/flyinghado2.png" />
+              </div>
+              <div data-p="112.50" style="display: none;">
+                <img data-u="image" src="img/flappy3.jpg" />
+              </div>
+              <a data-u="ad" href="http://www.jssor.com" style="display:none">jQuery Slider</a>
+
+            </div>
+            <!-- Bullet Navigator -->
+            <div data-u="navigator" class="jssorb05" style="bottom:16px;right:16px;" data-autocenter="1">
+              <!-- bullet navigator item prototype -->
+              <div data-u="prototype" style="width:16px;height:16px;"></div>
+            </div>
+            <!-- Arrow Navigator -->
+            <span data-u="arrowleft" class="jssora12l" style="top:0px;left:0px;width:30px;height:46px;" data-autocenter="2"></span>
+            <span data-u="arrowright" class="jssora12r" style="top:0px;right:0px;width:30px;height:46px;" data-autocenter="2"></span>
+          </div>
+
+<!--           <picture>
             <source srcset="img/flyinghado3.png" media="(min-width: 64em)" alt="...">
-              <source srcset="images/flyinghado3.png" media="(min-width: 37.5em)" alt="...">
+              <source srcset="img/flyinghado3.png" media="(min-width: 37.5em)" alt="...">
                 <img src="img/flyinghado3.png">
-          </picture>
+              </picture> -->
 <!--           <div class="android-screens">
             <div class="android-wear android-screen">
               <a class="android-image-link" href="">
@@ -190,13 +227,13 @@
             </p>
             <picture>
               <source srcset="img/ryu.jpg" media="(min-width: 64em)" alt="...">
-              <source srcset="img/akuma.jpg" media="(min-width: 37.5em)" alt="...">
-              <img src="img/ryu.jpg">
-          </picture>
-          </div>
-<!--           <div class="android-customized-section-image"></div> -->
-        </div>
-        <div class="android-more-section">
+                <source srcset="img/akuma.jpg" media="(max-width: 64em)" alt="...">
+                  <img src="img/ryu.jpg">
+                </picture>
+              </div>
+              <!--           <div class="android-customized-section-image"></div> -->
+            </div>
+            <div class="android-more-section">
           <div class="android-section-title mdl-typography--display-1-color-contrast">Follow Us</div><!-- 
           <div class="android-card-container mdl-grid">
             <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
@@ -327,6 +364,12 @@
       </div>
     </div>
     <!-- <a href="https://github.com/google/material-design-lite/blob/master/templates/android-dot-com/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">View Source</a> -->
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jssor.slider.mini.js"></script>
+    <script defer src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.min.js"></script>
+    <script defer src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.ui.min.js"></script>
     <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+    <script defer type="text/javascript" src="js/app.js"></script>
+
   </body>
   </html>
