--- a/site/index.html
+++ b/site/index.html
@@ -28,7 +28,9 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
+
   <style>
     #view-source {
       position: fixed;
@@ -316,11 +318,17 @@
         <footer class="android-footer mdl-mega-footer">
           <div class="mdl-mega-footer--top-section">
             <div class="mdl-mega-footer--left-section">
-              <button class="mdl-mega-footer--social-btn"></button>
+              <button class="mdl-mega-footer--social-btn">
+                <a class="social-link" href="https://www.facebook.com/greg.federico"><i class="fa fa-facebook"></i></a>
+              </button>
               &nbsp;
-              <button class="mdl-mega-footer--social-btn"></button>
+              <button class="mdl-mega-footer--social-btn" href="">
+              <a class="social-link" href="https://github.com/gfed53"><i class="fa fa-github"></i></a>
+              </button>
               &nbsp;
-              <button class="mdl-mega-footer--social-btn"></button>
+              <button class="mdl-mega-footer--social-btn">
+                <a class="social-link" href="https://twitter.com/GFed53"><i class="fa fa-twitter"></i></a>
+              </button>
             </div>
             <div class="mdl-mega-footer--right-section">
               <a class="mdl-typography--font-light" href="#top">
