--- a/site/index.html
+++ b/site/index.html
@@ -120,15 +120,29 @@
   	<div class="android-be-together-section mdl-typography--text-center">
   		<div class="logo-font android-slogan">Thought Flappy Bird was gone when it was removed from stores?</div>
   		<div class="logo-font android-sub-slogan">Fear not, for it has been resurrected. But...in what form?</div>
-<!--           <div class="logo-font android-create-character">
-            <a href=""><img src="images/andy.png"> create your android character</a>
-        </div> -->
-
-<!--           <a href="#screens">
-            <button class="android-fab mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
-              <i class="material-icons">expand_more</i>
-            </button>
-        </a> -->
+		<div id="jssor_2" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden; visibility: hidden;">
+        <!-- Loading Screen -->
+        <div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
+            <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>
+            <div style="position:absolute;display:block;background:url('img/loading.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
+        </div>
+        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden;">
+            <div data-p="112.50" style="display: none;">
+                <img data-u="image" src="img/flappy-med1.jpg" />
+            </div>
+            <div data-p="112.50" style="display: none;">
+                <img data-u="image" src="img/flappy-med2.jpg" />
+            </div>
+            <div data-p="112.50" style="display: none;">
+                <img data-u="image" src="img/flappy-med3.jpg" />
+            </div>
+            <a data-u="ad" href="http://www.jssor.com" style="display:none">jQuery Slider</a>
+        
+        </div>
+        <!-- Arrow Navigator -->
+        <span data-u="arrowleft" class="jssora08l" style="top:8px;left:8px;width:50px;height:50px;" data-autocenter="1"></span>
+        <span data-u="arrowright" class="jssora08r" style="bottom:8px;right:8px;width:50px;height:50px;" data-autocenter="1"></span>
+    </div>
     </div>
     <div class="android-screen-section mdl-typography--text-center">
     	<!-- <a name="screens"></a> -->
@@ -141,16 +155,13 @@
     		</div>
     		<div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden;">
     			<div data-p="112.50" style="display: none;">
-    				<img data-u="image" src="img/flyinghado3.png" />
-    			</div>
-    			<div data-p="112.50" style="display: none;">
-    				<img data-u="image" src="img/flappy-med1.jpg" />
+    				<img data-u="image" src="img/flyinghado1_lg.png" />
     			</div>
     			<div data-p="112.50" style="display: none;">
     				<img data-u="image" src="img/flyinghado2.png" />
     			</div>
     			<div data-p="112.50" style="display: none;">
-    				<img data-u="image" src="img/flappy3.jpg" />
+    				<img data-u="image" src="img/flyinghado3.png" />
     			</div>
     			<a data-u="ad" href="http://www.jssor.com" style="display:none">jQuery Slider</a>
 
@@ -219,18 +230,17 @@
         </div>
     </div>
 </div>
-<div class="android-customized-section">
+<div class="android-customized-section section-4">
 	<div class="android-customized-section-text">
 		<div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">..But what kind of a twist is this?</div>
 		<p class="mdl-typography--font-light my-para">
 			If the original Flappy Bird avoided a copyright-related lawsuit, this one definitely will not!
 			<br>
-			<!--              <a href="" class="android-link mdl-typography--font-light">Customise your phone</a> -->
 		</p>
 		<picture>
 			<source srcset="img/ryu.jpg" media="(min-width: 64em)" alt="...">
 				<source srcset="img/akuma.jpg" media="(max-width: 64em)" alt="...">
-					<img src="img/ryu.jpg">
+					<img class="sf-image" src="img/ryu.jpg">
 				</picture>
 			</div>
 			<!--           <div class="android-customized-section-image"></div> -->
@@ -340,7 +350,9 @@
 
     	<div class="mdl-mega-footer--middle-section">
     		<p class="mdl-typography--font-light">By Gregory Federico. 2015-2016.</p>
-    		<p class="mdl-typography--font-light">Courtesy of Dong Nguyen, original mastermind behind Flappy Bird. Backgrounds courtesy of <a href="http://www.freebiesgallery.com">freebiesgallery.com</a>, <a href="http://pixsearching.com">pixsearching.com</a>. Theme courtesy (you guessed it) of Capcom's <a href="http://streetfighter.com/">Street Fighter</a> series.</p>
+    		<p class="mdl-typography--font-light">Courtesy of Dong Nguyen, original mastermind behind Flappy Bird.</p> 
+    		<p>Backgrounds courtesy of <a href="http://www.freebiesgallery.com">freebiesgallery.com</a>, <a href="http://pixsearching.com">pixsearching.com</a>.</p>
+    		<p>Theme courtesy (you guessed it) of Capcom's <a href="http://streetfighter.com/">Street Fighter</a> series.</p>
     	</div>
 
          <!--  <div class="mdl-mega-footer--bottom-section">
