--- a/site/about-old2.html
+++ b/site/about-old2.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -23,11 +23,6 @@
 			z-index: 900;
 		}
 	</style>
-	<script>
-    // Picture element HTML5 shiv
-    document.createElement( "picture" );
-</script>
-<script src="js/picturefill.min.js" async></script>
 </head>
 <body>
 	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -45,8 +40,8 @@
 				<!-- Navigation -->
 				<div class="android-navigation-container">
 					<nav class="android-navigation mdl-navigation">
-						<a class="mdl-navigation__link mdl-typography--text-uppercase" href="index.html">Home</a>
-						<a class="mdl-navigation__link mdl-typography--text-uppercase" href="#">About</a>
+						<a class="mdl-navigation__link mdl-typography--text-uppercase" href="#">Home</a>
+						<a class="mdl-navigation__link mdl-typography--text-uppercase" href="about.html">About</a>
 						<a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Play!</a>
 					</nav>
 				</div>
@@ -63,23 +58,19 @@
 				<div class="android-drawer-separator"></div>
 			</nav>
 		</div>
-		<div class="android-content mdl-layout__content">
-			<a name="top"></a>
-			<div id="about">
-				<h1>Storyline</h1>
-				<p>Inspired by Street Fighter, this Flappy Bird crossover involves using your unique telekinetic power of clicking (or tapping) to control Ryu's (or Ken's, Akuma's, Sakura's, or Sean's....but not Dan's!) hadouken and manuever it between ascending and descending wooden planks. This is in honor of the deceased Gouken, arguable original master of the hadouken (Akuma might disagree though), and is a ritual performed every so often between the hadouken-throwing martial artists. Won't you join in?</p>
-				<h1>Directions</h1>
-				<p>The goal is to not collide with the planks, and achieve a high score. If you do collide, it's game over.</p>
-				<p>Simply tap or click, depending on the device, anywhere on the screen other than the pause button (on mobile devices) to control the hadouken. While using a keyboard, hit the spacebar to toggle pause mode. On mobile devices, use (you guessed it!) the pause button. From the moment the game starts, as well as the moment after unpausing, you get a 5 second breather.</p>
-				<p>If you do pretty well, you might notice that the game will adjust as well... Good luck!</p>
-			</div>
+		<div id="about">
+			<h1>Storyline</h1>
+			<p>Inspired by Street Fighter, this Flappy Bird crossover involves using your unique telekinetic power of clicking (or tapping) to control Ryu's (or Ken's, Akuma's, Sakura's, or Sean's....but not Dan's!) hadouken and manuever it between ascending and descending wooden planks. This is in honor of the deceased Gouken, arguable original master of the hadouken (Akuma might disagree though), and is a ritual performed every so often between the hadouken-throwing martial artists. Won't you join in?</p>
+			<h1>Directions</h1>
+			<p>The goal is to not collide with the planks, and achieve a high score. If you do collide, it's game over.</p>
+			<p>Simply tap or click, depending on the device, anywhere on the screen other than the pause button (on mobile devices) to control the hadouken. While using a keyboard, hit the spacebar to toggle pause mode. On mobile devices, use (you guessed it!) the pause button. From the moment the game starts, as well as the moment after unpausing, you get a 5 second breather.</p>
+			<p>If you do pretty well, you might notice that the game will adjust as well... Good luck!</p>
 		</div>
 	</div>
-	<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<!-- <script type="text/javascript" src="js/jssor.slider.mini.js"></script> -->
-	<script defer src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.min.js"></script>
-	<script defer src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.ui.min.js"></script>
-	<script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-	<!-- <script defer type="text/javascript" src="js/app.js"></script> -->
-</body>
-</html>
+		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+		<!-- <script defer src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.min.js"></script> -->
+		<!-- <script defer src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.ui.min.js"></script> -->
+		<!-- <script defer type="text/javascript" src="js/app.js"></script> -->
+	</body>
+	</html>
