--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
-	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	<title>Flying Hadouken</title>
+	<link href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<canvas id="main-canvas"></canvas>
+	<div id="obs-countdown">
+		<h1 class="ready obs-text"></h1>
+	</div>
 	<div id="overlay">
 		<h3>Current Score: <span id="pipes-flown-through">0</span></h3>
 		<h3>High Score: <span id="high-score">0</span></h3>
-		<h3><span id="ready"></span></h3>
 		<form action="">
 			<input type="button" id="btn-pause" value="Pause">
 		</form>
@@ -21,7 +23,7 @@
 		<img id="wood" src="images/wood.png">
 		<img id="ryu-stage" src="images/ryu-stage.jpg">
 	</div>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
