--- a/site/about.html
+++ b/site/about.html
@@ -47,7 +47,7 @@
 					<nav class="android-navigation mdl-navigation">
 						<a class="mdl-navigation__link mdl-typography--text-uppercase" href="index.html">Home</a>
 						<a class="mdl-navigation__link mdl-typography--text-uppercase" href="#">About</a>
-						<a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Play!</a>
+						<a class="mdl-navigation__link mdl-typography--text-uppercase" href="//gfed53.github.io/flappy-bird/flappy-bird/index.html">Play!</a>
 					</nav>
 				</div>
 			</div>
