--- a/site/about.html
+++ b/site/about.html
@@ -59,7 +59,7 @@
 			<nav class="mdl-navigation">
 				<a class="mdl-navigation__link" href="index.html">Home</a>
 				<a class="mdl-navigation__link" href="#">About</a>
-				<a class="mdl-navigation__link" href="">Play!</a>
+				<a class="mdl-navigation__link" href="//gfed53.github.io/flappy-bird/flappy-bird/index.html">Play!</a>
 				<div class="android-drawer-separator"></div>
 			</nav>
 		</div>
@@ -76,10 +76,8 @@
 		</div>
 	</div>
 	<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<!-- <script type="text/javascript" src="js/jssor.slider.mini.js"></script> -->
 	<script defer src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.min.js"></script>
 	<script defer src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.ui.min.js"></script>
 	<script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-	<!-- <script defer type="text/javascript" src="js/app.js"></script> -->
 </body>
 </html>
