--- a/site/index.html
+++ b/site/index.html
@@ -68,7 +68,7 @@
 			<div class="android-be-together-section mdl-typography--text-center">
 				<div class="logo-font android-slogan">Thought Flappy Bird was gone when it was removed from stores?</div>
 				<div class="logo-font android-sub-slogan">Fear not, for it has been resurrected. But...in what form?</div>
-				<div id="jssor_2" style="position: relative; margin: 3em auto; top: 0px; left: 0px; width: 600px; height: 300px; /*overflow: hidden;*/ visibility: hidden;">
+				<div id="jssor_2" style="position: relative; margin: 3em auto; top: 0px; left: 0px; width: 600px; height: 300px; visibility: hidden;">
 					<!-- Loading Screen -->
 					<div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
 						<div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>
@@ -92,7 +92,6 @@
 				</div>
 			</div>
 			<div class="android-screen-section mdl-typography--text-center">
-				<!-- <a name="screens"></a> -->
 				<div class="mdl-typography--display-1-color-contrast my-sub-header">It's a...bird, it's....not a bird!</div>
 				<div id="jssor_1" style="position: relative; margin: 2em auto; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden; visibility: hidden;">
 					<!-- Loading Screen -->
