Added directions to pause screen, changed layout/color scheme

--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
 	<canvas id="main-canvas"></canvas>
-	<div id="obs-countdown">
-		<h1 class="ready obs-text"></h1>
+	<div id="obs-countdown" class="obs-text">
+		<h1 class="ready obs-text-title"></h1>
+		<h2>(Hit spacebar to toggle pause-mode while using a keyboard)</h2>
+		<h2>Directions: </h2>
+		<p>The goal is to not collide with the planks, and achieve a high score. If you do collide, it's game over.</p>
+		<p>Simply tap or click, depending on the device, anywhere on the screen other than the pause button (on mobile devices) to control the hadouken. While using a keyboard, hit the spacebar to toggle pause mode. On mobile devices, use (you guessed it!) the pause button. From the moment the game starts, as well as the moment after unpausing, you get a 5 second breather.</p>
+		<p>If you do pretty well, you might notice that the game will adjust as well... Good luck!</p>
 	</div>
 	<div id="overlay">
 		<h3>Current Score: <span id="pipes-flown-through">0</span></h3>
