Updated readme/about section, fixed some typos

--- a/site/about.html
+++ b/site/about.html
@@ -67,10 +67,10 @@
 			<a name="top"></a>
 			<div id="about">
 				<h1>Storyline</h1>
-				<p>Inspired by Street Fighter, this Flappy Bird crossover involves using your unique telekinetic power of clicking (or tapping) to control Ryu's (or Ken's, Akuma's, Sakura's, or Sean's....but not Dan's!) hadouken and manuever it between ascending and descending wooden planks. This is in honor of the deceased Gouken, arguable original master of the hadouken (Akuma might disagree though), and is a ritual performed every so often between the hadouken-throwing martial artists. Won't you join in?</p>
+				<p>Inspired by Street Fighter, this Flappy Bird crossover involves using your unique telekinetic power of clicking (or tapping) to control Ryu's (or Ken's, Akuma's, Sakura's, or Sean's....but not Dan's!) hadouken and maneuver it between ascending and descending wooden planks. This is in honor of the deceased Gouken, arguable original master of the hadouken (Akuma might disagree though), and is a ritual performed every so often between the hadouken-throwing martial artists. Won't you join in?</p>
 				<h1>Directions</h1>
 				<p>The goal is to not collide with the planks, and achieve a high score. If you do collide, it's game over.</p>
-				<p>Simply tap or click, depending on the device, anywhere on the screen other than the pause button (on mobile devices) to control the hadouken. While using a keyboard, hit the spacebar to toggle pause mode. On mobile devices, use (you guessed it!) the pause button. From the moment the game starts, as well as the moment after unpausing, you get a 5 second breather.</p>
+				<p>Simply tap or click, depending on the device, anywhere on the screen other than the pause button (on mobile devices) to control the hadouken. While using a keyboard, hit the spacebar to toggle pause mode. On mobile devices, use (you guessed it!) the pause button. From the moment the game starts, as well as the moment after un-pausing, you get a 5 second breather.</p>
 				<p>If you do pretty well, you might notice that the game will adjust as well... Good luck!</p>
 			</div>
 		</div>
