Updated README, using minified JS file for possible better performance

--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -23,12 +23,13 @@
 			<input type="button" id="btn-pause" value="Pause">
 		</form>
 	</div>
+	<!-- <div id="overlay-cover"></div> -->
 	<div id="images">
 		<img id="hado" src="images/hadouken.gif" width="2em" height="2em">
 		<img id="wood" src="images/wood.png">
 		<img id="ryu-stage" src="images/ryu-stage.jpg">
 	</div>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript" src="dist/app.js"></script>
 </body>
 </html>
