--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -23,8 +23,8 @@
 			<input type="button" id="btn-pause" value="Pause">
 		</form>
 	</div>
-	<!-- <div id="overlay-cover"></div> -->
 	<div id="images">
+		<!-- TODO: Replace hadouken gif with either a sprite sheet or mp4 (so it animates properly) -->
 		<img id="hado" src="images/hadouken.gif" width="2em" height="2em">
 		<img id="wood" src="images/wood.png">
 		<img id="ryu-stage" src="images/ryu-stage.jpg">
