--- a/site/src/index.html
+++ b/site/src/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" href="css/template.css"> -->
 	<link rel="stylesheet" href="css/styles.css">
 	<style>
 		#view-source {
@@ -135,7 +136,7 @@
 				<div class="android-customized-section-text">
 					<div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">..But what kind of a twist is this?</div>
 					<p class="mdl-typography--font-light my-para">
-						If the original Flappy Bird avoided a copyright-related lawsuit, this one definitely will not!
+						If the original Flappy Bird barely avoided a copyright-related lawsuit, this one definitely will not!
 						<br>
 					</p>
 					<picture>
